2002-07-24  Dan Dennedy <dan@dennedy.org>
	* enc_input.c: applied patch from Peter Schlaile for
	  NTSC encoding, and tested and debugged ppm and pgm input filters
	  and encode functions.

2002-07-05  Dan Dennedy <dan@dennedy.org>
	* dv.h, headers.c: added dv_encode_metadata() to write
	  recording datetime and timcode.
	* dv.h, headers.c: added dv_encode_timecode() to write
	  a frame count as timecode.

2002-06-27  Dan Dennedy <dan@dennedy.org>
	* YUY2.c:dv_YUY2_init(): clamp y lut to 0..255 when clamp_luma is false.
	* playdv/oss.c: init audio format in native instead of little endian.

2002-06-19  Dan Dennedy <dan@dennedy.org>
	* YUY2.c, bitstream.h, dv_types.h:
		big-endian fixes by Daniel Kobras
	* libdv.pc.in, configure.ac:
		remove glib/gtk, add popt dependencies by Daniel Kobras
	* libdv/Makefile.am: bump libtool version to 2:0:0
	* configure.ac: bump package version to 0.9.6

2002-05-26  Stefan Lucke <Stefan.Lucke1@epost.de>
	* apply portability patch of Steven M. Schultz
	* fix off by one in rgb.c array bounds check
	
2002-05-23  Stefan Lucke <Stefan.Lucke1@epost.de>
	* bugfix for #440048, compile playdv with gtk support

2002-05-22  Stefan Lucke <Stefan.Lucke1@epost.de>
	* added clamping for rgb render too. (green speckle bug)

2002-05-22  Dan Dennedy <dan@dennedy.org>
	* dv.h: add int dv_get_recording_datetime_tm()

2002-05-21  Stefan Lucke <Stefan.Lucke1@epost.de>
	* avoid remaining shared memory segment after playdv crash
	* avoid decoder crash (bug #231580, #558590 etc.). There are some
	  viewable decoding errors now.
	* new clamping for NTSC Xv mmx + half high render.

2002-05-19  Stefan Lucke <Stefan.Lucke1@epost.de>
	* new clamping and addtitional half high renderer of PAL Xv mmx.
	* modified format of audio error reporting
	* additional error reporting of video errors
	  example of messages written to stderr
		ver 00:01:18.21 2001-11-11 14:26:34 9f a7 37 a8
		abf 00:01:40.18 2001-11-11 14:26:56 7f 37 00 12
